--- a/css/orderdetail.css
+++ b/css/orderdetail.css
@@ -112,132 +112,66 @@ padding: 0;
     display: block;
 }
 
+.fit-image{
+width: 100%;
+object-fit: cover;
+height: 450px;
+background-color: white;/* only if you want fixed height */
+}
+
+
 
 .fa-bars, .fa-bars{
 	color: #fff;
 }
-
-/*Search button*/
-
-form.searchButton{
-  margin: auto;
-  position: relative;
-  width: 400px;
-  min-width: 270px;
-  padding: 0 15px;
-}
-
-form.searchButton input{
-  width: 100%;
-  height: 50px;
-  border-radius: 50px;
-  border: none;
-  padding: 10px 20px;
-  background-color:#f1f1f1;
-}
-form.searchButton button{
-  border: none;
-  background-color: transparent;
-  outline: none;
-}
-
-form.searchButton button i{
-    position:absolute;
-    top:17px;
-    right:30px;
-    width:24px;
-    height:24px;
-}
-
-input:focus{
-  outline: none;
-}
-
-
-.filter{
-  padding: 10px 20px;
-}
-
-.filter button{
-  background-color: #2b2b2b;
-  color: white;
-}
-
-.filter button:hover{
-  background-color: #2b2b2b;
-  color: white;
-}
-
-.filter2{
-  padding: 10px 20px;
-}
-
-.filter2 button{
-  background-color: white;
-  border: 2px solid #2b2b2b;
-  color:#2b2b2b;
-}
-
-.filter2 button:hover{
-  background-color: white;
-  border: 2px solid #2b2b2b;
-  color:#2b2b2b;
-}
 /*
 Product main*/
-.fix-image {
-  width: 300px;
-  height: 200px;
-}
-
-h6.card-type{
-  font-size: 15;
-  font-weight: 500;
-  color: #616161;
-}
-
-
-.card-details > .fa{
- font-size: 30px;
- position: relative;
-    top: 4px;
-}
-
-.card-details span{
-	font-size: 18px;
-	padding: 0 5px 10px ;
-}
-
-.card-time > .fa{
- font-size: 30px;
- position: relative;
-    top: 4px;
-}
-
-.card-time span{
-	font-size: 18px;
-	padding: 0 5px 10px ;
-}
-
-
-.card-img-top{
-height: 100%;
-width: 100%;
-object-fit: cover;
-}
-
 .card{
-  width: 300px;
+  width: 350px;
+   box-shadow: 0px 0px 48px -36px rgba(140,140,140,0.86);
+   margin-left: 0;
 }
+
+h5.card-title{
+  font-size: 17px;
+  font-weight: 600;
+  color: #212121;
+}
+
+h5.card-title span{
+  font-size: 20px;
+  font-weight: 400;
+  color: #404040;
+  padding-left: 5px; 
+}
+
+h6.card-title{
+  font-size: 18px;
+  font-weight: 400;
+  color: #404040;
+}
+
+h6.card-title li{
+  margin: 3px 0px;
+}
+
+p.card-text{
+  font-size:13px;
+  font-weight: 500;
+  text-align: justify;
+  color: #4f4f4f;
+}
+
+.card-price{
+  font-size:18px;
+  font-weight: 700;
+  color: #e75d57;
+}
+
 .buy-btn{
   background-color:  #e75d57;
   color: white;
   border: none;
-}
-
-
-.modal-btn{
-  float:right;
 }
 
 .buy-btn:hover{
@@ -265,17 +199,56 @@ object-fit: cover;
 }
 
 
-
 a:hover, a:visited, a:link, a:active
 {
     text-decoration: none;
 }
 
-.fit-image{
-width: 100%;
-object-fit: cover;
-height: 300px; /* only if you want fixed height */
-}
+/*Modal*/
+    .modal-dialog-full-width {
+        width: 100% !important;
+        height: 100% !important;
+        margin: 0 !important;
+        padding: 0 !important;
+        max-width:none !important;
+    }
+
+    .modal-box{
+      width: 400px;
+      margin-bottom: 20px;
+    }
+
+    .service-title{
+      font-size: 20px;
+      font-weight: 600;
+      padding: 5px 0px;
+    }
+
+    .service-title span{
+      font-size: 20px;
+      font-weight: 500;
+    }
+    
+    .heading{
+       font-size: 30px;
+       font-weight: 600;
+       margin-bottom: 10px; 
+    }
+
+    .modal-content-full-width  {
+        height: auto !important;
+        min-height: 100% !important;
+        border-radius: 0 !important;
+        background-color: #fff !important;
+    }
+
+    .modal-header-full-width  {
+        border-bottom: 1px solid #9ea2a2 !important;
+    }
+
+    .modal-footer-full-width  {
+        border-top: 1px solid #9ea2a2 !important;
+    }
 
 
 @media screen and  (min-width: 768px){
@@ -296,10 +269,6 @@ height: 300px; /* only if you want fixed height */
 
 @media only screen and (max-width: 767px){
 
-.fix-image {
-  width: 300px;
-  height: 200px;
-}
 
 .card{
   width: 300px;
@@ -317,17 +286,26 @@ height: 300px; /* only if you want fixed height */
 }
 
 @media only screen and (max-width: 500px){
-.fix-image {
-  width: 300px;
-  height: 180px;
+
+h5.card-title{
+  font-size:15px;
+  font-weight: 600;
+  text-align: justify;
+  color: #4f4f4f;
 }
 
-p.card-text{
-  font-size:10px;
+h5.card-title span{
+  font-size:17px;
   font-weight: 500;
   text-align: justify;
   color: #4f4f4f;
 }
+
+
+.modal-box{
+  width: 300px;
+}
+
 
 .card-price{
   font-size:15px;
@@ -336,12 +314,25 @@ p.card-text{
   padding-bottom: 5px;
 }
 
-.modal-btn{
-  float:right;
-}
+   .service-title{
+        font-size: 18px;
+        font-weight: 600;
+        padding: 5px 0px;
+      }
+
+      .service-title span{
+        font-size: 18px;
+        font-weight: 500;
+      }
+      
+      .heading{
+         font-size: 25px;
+         font-weight: 600;
+         margin-bottom: 10px; 
+      }
 
 .card-body{
-  padding:10px;
+  padding:15px;
 
 }
 
@@ -352,23 +343,9 @@ p.card-text{
 
 .product-page-display{
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(270px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
   grid-gap: 5px;
   align-items: start;
   padding:0 10px;
 }
-
-.hire-mech{
-	width: 200px;
-	border: none;
-	padding: 10px 5px;
-	margin: 20px 0;
-	border-radius:8px;
-	background-color:  #e75d57;
-	color: #fff;
-	font-size: 1.2rem;
 }
-}
-
-
-
